--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ rootProject.ext.forge_version = minecraft_version + "-" + new JsonSlurper().pars
 rootProject.ext.fabric_api_version = getModrinthVersion("fabric", minecraft_version, "fabric-api")
 rootProject.ext.architectury_version = getModrinthVersion("forge", minecraft_version, "architectury-api").split("\\+")[0]
 rootProject.ext.architectury_id = minecraft_main_version == 16 ? "me.shedaniel" : "dev.architectury"
+rootProject.ext.mod_menu_version = getModrinthVersion("fabric", minecraft_version, "modmenu")
 
 architectury {
 	minecraft = minecraft_version
@@ -47,6 +48,7 @@ task setupFiles() {
 	System.out.println("Forge: " + rootProject.forge_version)
 	System.out.println("Fabric API: " + rootProject.fabric_api_version)
 	System.out.println("Architectury: " + rootProject.architectury_version)
+	System.out.println("Mod Menu: " + rootProject.mod_menu_version)
 
 	download {
 		src "https://github.com/jonafanho/Minecraft-Mappings/archive/refs/heads/1.${minecraft_main_version}.zip"
