--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -45,7 +45,7 @@ shadowJar {
 	exclude "architectury.common.json"
 
 	configurations = [project.configurations.shadowCommon]
-	classifier "dev-shadow"
+//	classifier "dev-shadow"
 	relocate "org.apache.http", "org.teacon.libraries.org.apache.http"
 	relocate "org.apache.commons.codec", "org.teacon.libraries.org.apache.commons.codec"
 	relocate "org.apache.commons.logging", "org.teacon.libraries.org.apache.commons.logging"
@@ -54,7 +54,7 @@ shadowJar {
 remapJar {
 	input.set shadowJar.archiveFile
 	dependsOn shadowJar
-	classifier null
+//	classifier null
 }
 
 components.java {
