--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        minecraft: [ 1.17.1, 1.18.2, 1.19.2 ]
+        minecraft: [ 1.19.4 ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
